[gd_scene format=3 uid="uid://cwe8t3lvlv7ki"]

[ext_resource type="Script" uid="uid://dks68e7oq3vwa" path="res://skin_selector.gd" id="1_dimmy"]
[ext_resource type="Theme" uid="uid://caljym4n8ghq8" path="res://Assets/Styles/DefaultTheme.tres" id="2_cmbhx"]
[ext_resource type="Texture2D" uid="uid://br21lo6rpcuvq" path="res://Assets/Dogs/OutlinedDog/FACES_C.png" id="3_6fsxm"]
[ext_resource type="Texture2D" uid="uid://c1xp2p4lnown3" path="res://Assets/Dogs/NewDog/newdog_legsFRONT_sheet_C.png" id="4_k52lc"]
[ext_resource type="AudioStream" uid="uid://bj3kggw0gs3xi" path="res://Assets/Sound/bark.wav" id="5_6msm5"]
[ext_resource type="Texture2D" uid="uid://cxm52e0c581yk" path="res://Assets/Dogs/cosmetics/hat_christmas.png" id="6_i25uj"]
[ext_resource type="Texture2D" uid="uid://baisbs5c35f4g" path="res://Assets/Dogs/cosmetics/hat_cowboy.png" id="7_heghs"]
[ext_resource type="Texture2D" uid="uid://dvj0pjlmvqwve" path="res://Assets/Dogs/cosmetics/hat_crashdummyDot.png" id="8_l0rio"]
[ext_resource type="Texture2D" uid="uid://bmdnyc2fq6qg7" path="res://Assets/Dogs/cosmetics/hat_helmet.png" id="9_c1sd7"]
[ext_resource type="PackedScene" uid="uid://df6v31n3ooicl" path="res://Scenes/Menus/back_button.tscn" id="10_cmbhx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_45bpw"]
atlas = ExtResource("3_6fsxm")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v2bu"]
atlas = ExtResource("3_6fsxm")
region = Rect2(0, 0, 43, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_6xsso"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_45bpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v2bu")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dlucr"]
atlas = ExtResource("4_k52lc")
region = Rect2(0, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0jc0"]
atlas = ExtResource("4_k52lc")
region = Rect2(32, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqkaf"]
atlas = ExtResource("4_k52lc")
region = Rect2(64, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgbr8"]
atlas = ExtResource("4_k52lc")
region = Rect2(96, 0, 32, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjwsp"]
atlas = ExtResource("4_k52lc")
region = Rect2(128, 0, 32, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_nf6su"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlucr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0jc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqkaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgbr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjwsp")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cmbhx"]
bg_color = Color(0, 0, 0, 0.270588)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 0.270588)

[node name="SkinSelector" type="PanelContainer" unique_id=1577442381]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_dimmy")
hats = Array[CompressedTexture2D]([null, ExtResource("6_i25uj"), ExtResource("7_heghs"), ExtResource("8_l0rio"), ExtResource("9_c1sd7")])

[node name="PanelContainer" type="PanelContainer" parent="." unique_id=2005089000]
process_mode = 3
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_cmbhx")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer" unique_id=860431152]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer" unique_id=85068292]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT_COLOR"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer" unique_id=97191362]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer" unique_id=191960741]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT_COLOR"
horizontal_alignment = 1

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer/HBoxContainer" unique_id=1937386427]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="ChangeHat" type="Button" parent="PanelContainer/VBoxContainer" unique_id=1142329269]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_cmbhx")
text = "CHANGE_HAT"

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer" unique_id=1528918680]
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/Control" unique_id=429658124]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Head" type="AnimatedSprite2D" parent="PanelContainer/VBoxContainer/Control/Control" unique_id=991204301]
z_index = 1
texture_filter = 1
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_6xsso")

[node name="Legs" type="AnimatedSprite2D" parent="PanelContainer/VBoxContainer/Control/Control/Head" unique_id=1402050307]
z_index = -1
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_nf6su")

[node name="BarkSound" type="AudioStreamPlayer2D" parent="PanelContainer/VBoxContainer/Control/Control/Head" unique_id=566287524]
stream = ExtResource("5_6msm5")
bus = &"SFX"

[node name="Hats" type="Node2D" parent="PanelContainer/VBoxContainer/Control/Control/Head" unique_id=832293937]

[node name="HatNone" type="Node2D" parent="PanelContainer/VBoxContainer/Control/Control/Head/Hats" unique_id=864931709]
visible = false
scale = Vector2(0.99999994, 0.99999994)

[node name="HatChristmas" type="Sprite2D" parent="PanelContainer/VBoxContainer/Control/Control/Head/Hats" unique_id=872947272]
z_index = 1
position = Vector2(1, -17)
texture = ExtResource("6_i25uj")

[node name="HatCowboy" type="Sprite2D" parent="PanelContainer/VBoxContainer/Control/Control/Head/Hats" unique_id=138215640]
visible = false
z_index = 1
position = Vector2(1, -11)
texture = ExtResource("7_heghs")

[node name="HatCrashdummyDot" type="Sprite2D" parent="PanelContainer/VBoxContainer/Control/Control/Head/Hats" unique_id=126227882]
visible = false
z_index = 1
position = Vector2(-6, -6)
texture = ExtResource("8_l0rio")

[node name="HatHelmet" type="Sprite2D" parent="PanelContainer/VBoxContainer/Control/Control/Head/Hats" unique_id=157409755]
visible = false
z_index = 1
position = Vector2(1, -4)
texture = ExtResource("9_c1sd7")

[node name="Back" parent="PanelContainer/VBoxContainer" unique_id=7349764 instance=ExtResource("10_cmbhx")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "SKIN_SELECTION_BACK"

[node name="HatSelectScreen" type="Control" parent="." unique_id=231717897]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HatSelectScreen" unique_id=545640412]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="HatSelectScreen/VBoxContainer" unique_id=879472301]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cmbhx")

[node name="HatButtons" type="HFlowContainer" parent="HatSelectScreen/VBoxContainer/PanelContainer" unique_id=230438654]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
alignment = 1
last_wrap_alignment = 2

[node name="ButtonContainer" type="HBoxContainer" parent="HatSelectScreen/VBoxContainer" unique_id=532534272]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Back" parent="HatSelectScreen/VBoxContainer/ButtonContainer" unique_id=842997207 instance=ExtResource("10_cmbhx")]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/VBoxContainer/ChangeHat" to="." method="_on_change_hat_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
